--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "@types/expo-env.d.ts",
-    "expo-env.d.ts"
-, "tailwind.config.js"  ]
+    "expo-env.d.ts",
+    "tailwind.config.cjs",
+    "nativewind-env.d.ts"
+  ]
 }
