--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "type": "module",
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
@@ -35,7 +36,7 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.18.0",
-    "react-native-reanimated": "^3.15.3",
+    "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg-transformer": "^1.5.0",
@@ -50,7 +51,6 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
-    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
